--- a/mlflow_for_ml_dev/notebooks/experiment_tracking_fundamentals/4_1_log_custom_functions.ipynb
+++ b/mlflow_for_ml_dev/notebooks/experiment_tracking_fundamentals/4_1_log_custom_functions.ipynb
@@ -25,7 +25,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "from pathlib import Path\n",
+    "\n",
+    "def find_project_root(marker=\"pyproject.toml\"):\n",
+    "    p = Path().resolve()\n",
+    "    for parent in [p, *p.parents]:\n",
+    "        if (parent / marker).exists():\n",
+    "            return parent\n",
+    "    raise RuntimeError(\"Could not find project root\")\n",
+    "\n",
+    "PROJECT_ROOT = find_project_root()\n",
+    "sys.path.append(str(PROJECT_ROOT))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,9 +74,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\dragu\\Documents\\GIT\\mlflow_for_ml_dev_tutorial\\.venv\\Lib\\site-packages\\mlflow\\pyfunc\\__init__.py:3087: UserWarning: \u001b[33mAdd type hints to the `predict` method to enable data validation and automatic signature inference. Check https://mlflow.org/docs/latest/model/python_model.html#type-hint-usage-in-pythonmodel for more details.\u001b[0m\n",
+      "  color_warning(\n",
+      "c:\\Users\\dragu\\Documents\\GIT\\mlflow_for_ml_dev_tutorial\\.venv\\Lib\\site-packages\\mlflow\\pyfunc\\utils\\data_validation.py:134: UserWarning: \u001b[33mAdd type hints to the `predict` method to enable data validation and automatic signature inference during model logging. Check https://mlflow.org/docs/latest/model/python_model.html#type-hint-usage-in-pythonmodel for more details.\u001b[0m\n",
+      "  color_warning(\n",
+      "2025/12/04 14:22:06 WARNING mlflow.utils.environment: Failed to resolve installed pip version. ``pip`` will be added to conda.yaml environment spec without a version specifier.\n",
+      "2025/12/04 14:22:06 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0     2\n",
+      "1     4\n",
+      "2     6\n",
+      "3     8\n",
+      "4    10\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
     "# Define a simple function to log\n",
     "def predict(model_input):\n",
@@ -71,6 +116,7 @@
     "\n",
     "# Save the function as a model\n",
     "with mlflow.start_run(run_name=\"function_model\"):\n",
+    "    # we need to specify pip requirements for dependencies\n",
     "    mlflow.pyfunc.log_model(\"model\", python_model=predict, pip_requirements=[\"pandas\"])\n",
     "    run_id = mlflow.active_run().info.run_id\n",
     "\n",
@@ -123,7 +169,7 @@
     "\n",
     "* The predict method must adhere to the requirements of the Inference API.\n",
     "\n",
-    "* The predict method must have reference to context as the first named argument\n",
+    "* The predict method must have reference to context as the first named argument (even if you don't use it)\n",
     "\n",
     "* If you wish to provide parameters with your model, these must be defined as part of the model signature. The signature must be saved along with the model.\n",
     "\n",
@@ -133,13 +179,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\dragu\\Documents\\GIT\\mlflow_for_ml_dev_tutorial\\.venv\\Lib\\site-packages\\mlflow\\pyfunc\\utils\\data_validation.py:134: UserWarning: \u001b[33mAdd type hints to the `predict` method to enable data validation and automatic signature inference during model logging. Check https://mlflow.org/docs/latest/model/python_model.html#type-hint-usage-in-pythonmodel for more details.\u001b[0m\n",
+      "  color_warning(\n"
+     ]
+    }
+   ],
    "source": [
     "class CustomModel(mlflow.pyfunc.PythonModel):\n",
     "    \n",
     "    def predict(self, context, model_input):\n",
+    "        \"Mandatory method\"\n",
     "        self._preprocess(model_input)\n",
     "        return model_input.apply(lambda x: x * 2)\n",
     "    \n",
@@ -150,9 +206,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/12/04 14:34:08 WARNING mlflow.utils.environment: Failed to resolve installed pip version. ``pip`` will be added to conda.yaml environment spec without a version specifier.\n",
+      "2025/12/04 14:34:08 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d47b68cdef0849dfabf9233cd584f696\n"
+     ]
+    }
+   ],
    "source": [
     "with mlflow.start_run(run_name=\"class_model\") as run:\n",
     "    print(run.info.run_id)\n",
@@ -162,9 +234,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "processing input....\n",
+      "Input Length:  5\n",
+      "0     2\n",
+      "1     4\n",
+      "2     6\n",
+      "3     8\n",
+      "4    10\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
     "loaded_model = mlflow.pyfunc.load_model(f\"runs:/{run.info.run_id}/model\")\n",
     "prediction = loaded_model.predict(x_new)\n",
@@ -180,9 +267,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\dragu\\Documents\\GIT\\mlflow_for_ml_dev_tutorial\\.venv\\Lib\\site-packages\\mlflow\\pyfunc\\utils\\data_validation.py:134: UserWarning: \u001b[33mAdd type hints to the `predict` method to enable data validation and automatic signature inference during model logging. Check https://mlflow.org/docs/latest/model/python_model.html#type-hint-usage-in-pythonmodel for more details.\u001b[0m\n",
+      "  color_warning(\n"
+     ]
+    }
+   ],
    "source": [
     "class CustomModel(mlflow.pyfunc.PythonModel):\n",
     "    def __init__(self):\n",
@@ -202,9 +298,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/12/04 14:37:18 WARNING mlflow.utils.environment: Failed to resolve installed pip version. ``pip`` will be added to conda.yaml environment spec without a version specifier.\n",
+      "2025/12/04 14:37:18 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b09f484048a249feaba65e7849d714fb\n"
+     ]
+    }
+   ],
    "source": [
     "with mlflow.start_run(run_name=\"class_model_with_additional_methods\") as run:\n",
     "    print(run.info.run_id)\n",
@@ -214,9 +326,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "processing input....\n",
+      "Input Length:  5\n",
+      "0     2\n",
+      "1     4\n",
+      "2     6\n",
+      "3     8\n",
+      "4    10\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
     "loaded_model = mlflow.pyfunc.load_model(f\"runs:/{run.info.run_id}/model\")\n",
     "prediction = loaded_model.predict(x_new)\n",
@@ -225,38 +352,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "mlflow.pyfunc.PyFuncModel"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type(loaded_model)"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'PyFuncModel' object has no attribute 'additional_method'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[16], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mloaded_model\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43madditional_method\u001b[49m()\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'PyFuncModel' object has no attribute 'additional_method'"
+     ]
+    }
+   ],
+   "source": [
+    "loaded_model.additional_method()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running an additional method\n"
+     ]
+    }
+   ],
    "source": [
     "# I can use the method \"unwrap_python_model\" to get the original class\n",
+    "# now, I'm able to use any additional methods defined in the class\n",
     "original_class = loaded_model.unwrap_python_model()\n",
     "original_class.additional_method()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "processing input....\n",
+      "Input Length:  5\n"
+     ]
+    }
+   ],
    "source": [
     "original_class._preprocess(x_new)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "__main__.CustomModel"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type(original_class)"
    ]
@@ -270,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,9 +471,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'inputs': '[{\"type\": \"integer\", \"name\": \"input\", \"required\": true}]',\n",
+       " 'outputs': '[{\"type\": \"long\", \"name\": \"output\", \"required\": true}]',\n",
+       " 'params': '[{\"name\": \"factor\", \"default\": 1, \"shape\": null, \"type\": \"integer\"}]'}"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "input_schema = Schema([\n",
     "    ColSpec(type=\"integer\", name=\"input\", required=True),\n",
@@ -306,9 +507,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\dragu\\Documents\\GIT\\mlflow_for_ml_dev_tutorial\\.venv\\Lib\\site-packages\\mlflow\\pyfunc\\utils\\data_validation.py:134: UserWarning: \u001b[33mAdd type hints to the `predict` method to enable data validation and automatic signature inference during model logging. Check https://mlflow.org/docs/latest/model/python_model.html#type-hint-usage-in-pythonmodel for more details.\u001b[0m\n",
+      "  color_warning(\n"
+     ]
+    }
+   ],
    "source": [
     "class CustomModel(mlflow.pyfunc.PythonModel):\n",
     "    def __init__(self):\n",
@@ -345,9 +555,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6d7a23689d1d4cafa247765543476552\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\dragu\\Documents\\GIT\\mlflow_for_ml_dev_tutorial\\.venv\\Lib\\site-packages\\mlflow\\pyfunc\\__init__.py:3183: UserWarning: \u001b[1;33mAn input example was not provided when logging the model. To ensure the model signature functions correctly, specify the `input_example` parameter. See https://mlflow.org/docs/latest/model/signatures.html#model-input-example for more details about the benefits of using input_example.\u001b[0m\n",
+      "  color_warning(\n",
+      "2025/12/04 14:44:09 WARNING mlflow.utils.environment: Failed to resolve installed pip version. ``pip`` will be added to conda.yaml environment spec without a version specifier.\n"
+     ]
+    }
+   ],
    "source": [
     "with mlflow.start_run(run_name=\"class_model_with_parameters\") as run:\n",
     "    print(run.info.run_id)\n",
@@ -356,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,9 +595,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "processing input....\n",
+      "Input Length:  5\n",
+      "Processing params....\n",
+      "{'factor': 1}\n",
+      "   input\n",
+      "0      1\n",
+      "1      2\n",
+      "2      3\n",
+      "3      4\n",
+      "4      5\n"
+     ]
+    }
+   ],
    "source": [
     "# inference with default parameters\n",
     "prediction = loaded_model.predict(x_new)\n",
@@ -378,22 +622,41 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "Using parameters, we have a possibility to make a dynamic model.\n",
+    "\n",
+    "Parameters are inside the schema, thus they are allowed to be provided to the model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "processing input....\n",
+      "Input Length:  5\n",
+      "Processing params....\n",
+      "{'factor': 10}\n",
+      "   input\n",
+      "0     10\n",
+      "1     20\n",
+      "2     30\n",
+      "3     40\n",
+      "4     50\n"
+     ]
+    }
+   ],
    "source": [
     "# inference with custom parameters\n",
     "prediction = loaded_model.predict(x_new, {\"factor\": 10})\n",
     "print(prediction)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -412,7 +675,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
