--- a/mlflow_for_ml_dev/notebooks/experiment_tracking_fundamentals/4_2_custom_functions_context.ipynb
+++ b/mlflow_for_ml_dev/notebooks/experiment_tracking_fundamentals/4_2_custom_functions_context.ipynb
@@ -18,8 +18,56 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Why PythonModel Context Exists\n",
+    "\n",
+    "In many real deployment scenarios, a model needs more than just code. It depends on\n",
+    "additional files or settings that must be versioned and loaded alongside the model.\n",
+    "Examples:\n",
+    "- tokenizers or vocabularies used in NLP\n",
+    "- encoders or normalization statistics for preprocessing\n",
+    "- lookup tables or business rules\n",
+    "- configuration files or thresholds that may change over time\n",
+    "\n",
+    "`context.artifacts` provides paths to these additional files stored with the model.\n",
+    "\n",
+    "`context.model_config` provides configurable behaviors without requiring separate files.\n",
+    "\n",
+    "`load_context` exists to load these artifacts **once at model load time**, so that\n",
+    "predict does not repeatedly load external data (important for performance and real-time\n",
+    "serving).\n",
+    "\n",
+    "In short:  \n",
+    "Artifacts = external data the model needs  \n",
+    "Model config = runtime settings controlling behavior  \n",
+    "load_context = preload artifacts efficiently before inference\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "from pathlib import Path\n",
+    "\n",
+    "def find_project_root(marker=\"pyproject.toml\"):\n",
+    "    p = Path().resolve()\n",
+    "    for parent in [p, *p.parents]:\n",
+    "        if (parent / marker).exists():\n",
+    "            return parent\n",
+    "    raise RuntimeError(\"Could not find project root\")\n",
+    "\n",
+    "PROJECT_ROOT = find_project_root()\n",
+    "sys.path.append(str(PROJECT_ROOT))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,13 +89,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\dragu\\Documents\\GIT\\mlflow_for_ml_dev_tutorial\\.venv\\Lib\\site-packages\\mlflow\\pyfunc\\utils\\data_validation.py:134: UserWarning: \u001b[33mAdd type hints to the `predict` method to enable data validation and automatic signature inference during model logging. Check https://mlflow.org/docs/latest/model/python_model.html#type-hint-usage-in-pythonmodel for more details.\u001b[0m\n",
+      "  color_warning(\n"
+     ]
+    }
+   ],
    "source": [
     "class CustomModel(mlflow.pyfunc.PythonModel):\n",
     "\n",
     "    def predict(self, context, model_input, params=None):\n",
+    "        # theoretically, you loaded the artifact here and you can use it to e.g. process predictions \n",
     "        print(\"Context Artifacts: \", context.artifacts)\n",
     "        print(\"Context Model Configurations: \", context.model_config)\n",
     "        return model_input.apply(lambda x: x * 2)\n",
@@ -58,9 +116,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "e4fd978a36564852bb7dd55c93c16623\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/12/04 15:46:28 WARNING mlflow.utils.environment: Failed to resolve installed pip version. ``pip`` will be added to conda.yaml environment spec without a version specifier.\n",
+      "2025/12/04 15:46:28 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n"
+     ]
+    }
+   ],
    "source": [
     "with mlflow.start_run(run_name=\"class_model_context\") as run:\n",
     "    print(run.info.run_id)\n",
@@ -69,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,9 +153,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Context Artifacts:  {}\n",
+      "Context Model Configurations:  None\n"
+     ]
+    }
+   ],
    "source": [
     "x_new = pd.DataFrame([1, 2, 3])\n",
     "prediction = loaded_model.predict(x_new)"
@@ -102,20 +185,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7c54ef93401d474da1a88bcb005e1af9\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ab003a7176b44a409f9b5d11106439c4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading artifacts:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/12/04 15:50:40 WARNING mlflow.utils.environment: Failed to resolve installed pip version. ``pip`` will be added to conda.yaml environment spec without a version specifier.\n",
+      "2025/12/04 15:50:40 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n"
+     ]
+    }
+   ],
    "source": [
     "with mlflow.start_run(run_name=\"class_model_context\") as run:\n",
     "    print(run.info.run_id)\n",
     "    mlflow.pyfunc.log_model(\"model\",\n",
     "                            python_model=CustomModel(),\n",
-    "                            artifacts={\"my_file\": \"/Users/manue/projects/mlflow_for_ml_dev/mlflow_for_ml_dev/src/utils/run_batch.py\"})"
+    "                            artifacts={\"my_file\": \"/Users/dragu/Documents/GIT/mlflow_for_ml_dev_tutorial/mlflow_for_ml_dev/src/utils/run_batch.py\"})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,9 +239,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Context Artifacts:  {'my_file': 'C:\\\\Users\\\\dragu\\\\Documents\\\\GIT\\\\mlflow_for_ml_dev_tutorial\\\\mlruns\\\\0\\\\7c54ef93401d474da1a88bcb005e1af9\\\\artifacts\\\\model\\\\artifacts\\\\run_batch.py'}\n",
+      "Context Model Configurations:  None\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "0",
+         "rawType": "int64",
+         "type": "integer"
+        }
+       ],
+       "ref": "908783cf-a626-4dee-91ae-034e55b18e2b",
+       "rows": [
+        [
+         "0",
+         "2"
+        ],
+        [
+         "1",
+         "4"
+        ],
+        [
+         "2",
+         "6"
+        ]
+       ],
+       "shape": {
+        "columns": 1,
+        "rows": 3
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   0\n",
+       "0  2\n",
+       "1  4\n",
+       "2  6"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "loaded_model.predict(x_new)"
    ]
@@ -148,9 +355,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d56724089dde496b84f1de8d179c8a82\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/12/04 15:53:36 WARNING mlflow.utils.environment: Failed to resolve installed pip version. ``pip`` will be added to conda.yaml environment spec without a version specifier.\n",
+      "2025/12/04 15:53:36 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n"
+     ]
+    }
+   ],
    "source": [
     "with mlflow.start_run(run_name=\"class_model_context\") as run:\n",
     "    print(run.info.run_id)\n",
@@ -163,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,9 +397,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Context Artifacts:  {}\n",
+      "Context Model Configurations:  {'model_name': 'My Custom Model'}\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "0",
+         "rawType": "int64",
+         "type": "integer"
+        }
+       ],
+       "ref": "969798ef-a6c1-4e2b-999f-6b2db27264dd",
+       "rows": [
+        [
+         "0",
+         "2"
+        ],
+        [
+         "1",
+         "4"
+        ],
+        [
+         "2",
+         "6"
+        ]
+       ],
+       "shape": {
+        "columns": 1,
+        "rows": 3
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   0\n",
+       "0  2\n",
+       "1  4\n",
+       "2  6"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "loaded_model.predict(x_new)"
    ]
@@ -190,9 +507,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\dragu\\Documents\\GIT\\mlflow_for_ml_dev_tutorial\\.venv\\Lib\\site-packages\\mlflow\\pyfunc\\utils\\data_validation.py:134: UserWarning: \u001b[33mAdd type hints to the `predict` method to enable data validation and automatic signature inference during model logging. Check https://mlflow.org/docs/latest/model/python_model.html#type-hint-usage-in-pythonmodel for more details.\u001b[0m\n",
+      "  color_warning(\n"
+     ]
+    }
+   ],
    "source": [
     "class CustomModel(mlflow.pyfunc.PythonModel):\n",
     "\n",
@@ -207,10 +533,14 @@
     "        print(\"Running an additional method\")\n",
     "\n",
     "    def load_context(self, context):\n",
+    "        \"\"\"This method is called automatically every time when the model is loaded.\n",
+    "        Use it when you need to load additional artifacts. E.g. load a model weights,\n",
+    "        a vocabulary file, etc.\"\"\"\n",
     "        print(\"loading context....\")\n",
     "        import time \n",
     "        time.sleep(5)\n",
     "        artifact = context.artifacts.get(\"predictions\")\n",
+    "        # we loaded context (dataframe), and it will be available in the predict method\n",
     "        self.df = pd.read_csv(artifact)\n",
     "\n",
     "        \n"
@@ -218,9 +548,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c774587d9bc5499cbaeb660b81978dcc\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e79fe74f871645c98b4efb6bb7696b86",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading artifacts:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/12/04 16:02:54 WARNING mlflow.utils.environment: Failed to resolve installed pip version. ``pip`` will be added to conda.yaml environment spec without a version specifier.\n",
+      "2025/12/04 16:02:54 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n"
+     ]
+    }
+   ],
    "source": [
     "with mlflow.start_run(run_name=\"class_model_context\") as run:\n",
     "    print(run.info.run_id)\n",
@@ -228,7 +588,7 @@
     "        \"model\",\n",
     "        python_model=CustomModel(),\n",
     "        artifacts={\n",
-    "            \"predictions\":\"/Users/manue/projects/mlflow_for_ml_dev/mlflow_for_ml_dev/notebooks/experiment_tracking_fundamentals/artifacts_example/predictions.csv\"\n",
+    "            \"predictions\":\"/Users/dragu/Documents/GIT/mlflow_for_ml_dev_tutorial/mlflow_for_ml_dev/notebooks/experiment_tracking_fundamentals/artifacts_example/predictions.csv\"\n",
     "            },\n",
     "        model_config={\"model_name\": \"Classifier\"}\n",
     "    )"
@@ -238,18 +598,49 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loading context....\n"
+     ]
+    }
+   ],
    "source": [
     "# load the model\n",
     "model_uri = f\"runs:/{run.info.run_id}/model\"\n",
-    "loaded_model = mlflow.pyfunc.load_model(model_uri)"
+    "loaded_model = mlflow.pyfunc.load_model(model_uri)\n",
+    "# we waited for 5 seconds as an example for artifact loading"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Getting predictions from the model Classifier\n",
+      "additional inputs: \n",
+      "   sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)  \\\n",
+      "0                6.1               2.8                4.7               1.2   \n",
+      "1                5.7               3.8                1.7               0.3   \n",
+      "2                7.7               2.6                6.9               2.3   \n",
+      "3                6.0               2.9                4.5               1.5   \n",
+      "4                6.8               2.8                4.8               1.4   \n",
+      "\n",
+      "   target  prediction  \n",
+      "0       1           1  \n",
+      "1       0           0  \n",
+      "2       2           2  \n",
+      "3       1           1  \n",
+      "4       1           1  \n"
+     ]
+    }
+   ],
    "source": [
     "predictions = loaded_model.predict(x_new)"
    ]
@@ -278,7 +669,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
